# 5-ala-cavity

./: .gitignore  Makefile  README.md  config.py  pyproject.toml  requirements.txt
analysis/: extract_functional_data.py  postprocess_results.py  run_topographic_analysis.py  statistical_evaluation.py
analysis/tools/: patch_ssim.py
analysis/visualization/: create_comparison_video.py  visualize_transform_families.py
exclusion/: run_exclusion_masks.py
lib/: __init__.py  blood_detection.py  fluorescence_transforms.py  persistent_homology.py  polar_surface_analysis.py  reflection_detection.py  topographic_analysis.py  utils.py
scripts/02_cavity_definition/: define_cavity_polished.py
scripts/03_analysis/: detect_blood_simple.py  detect_reflections_two_stage.py  trajectory_radial_analysis_v2.py
scripts/04_visualization/: create_comparison_video.py
scripts/utilities/: common.py  read_session_summary.py
segmentation/: __main__.py  main.py
segmentation/engine/: __init__.py  mask_store.py  remote_sam2.py  sam2_engine.py  video_reader.py
segmentation/server/: __init__.py  gpu_manager.py
segmentation/ui/: __init__.py  app_window.py  control_panel.py  frame_viewer.py  review_dialog.py  startup_dialog.py  zoom_preview.py
